--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://192.168.1.110:3306/world?verifyServerCertificate=false&useSSL=false&requireSSL=false
 spring.datasource.url=jdbc:mysql://localhost:3306/world?verifyServerCertificate=false&useSSL=false&requireSSL=false
 spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix=.html
