--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,20 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://192.168.1.110:3306/tnmesdb?verifyServerCertificate=false&useSSL=false&requireSSL=false
+
+
+##mysql 主数据库配置文件
+spring.datasource.master.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.master.username=root
+spring.datasource.master.password=123456
+spring.datasource.master.jdbc-url=jdbc:mysql://192.168.1.110:3306/tnmesdb?verifyServerCertificate=false&useSSL=false
+
+
+
+
+#sqlserver DB 从数据库
+spring.datasource.cluster.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.cluster.jdbc-url=jdbc:sqlserver://192.168.1.110:1433;DatabaseName=PlateWeighDB
+spring.datasource.cluster.username=tnmes
+spring.datasource.cluster.password=tianneng
+
