--- a/pom.xml
+++ b/pom.xml
@@ -53,9 +53,13 @@
             <version>1.3.6</version>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.40</version>
+        </dependency>
+        <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>sqljdbc4</artifactId>
-            <version>4.0</version>
         </dependency>
     </dependencies>
 
