--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>sqljdbc4</artifactId>
+            <version>4.0</version>
         </dependency>
     </dependencies>
 
