添加文档管理日期目录

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.cluster.jdbc-url=jdbc:sqlserver://192.168.1.106:1433;DatabaseN
 spring.datasource.cluster.username=tnmes
 spring.datasource.cluster.password=tianneng
 
+spring.servlet.multipart.maxFileSize=50MB
+spring.servlet.multipart.maxRequestSize=50MB
