添加定时自动排班功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@
 spring.datasource.master.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.master.username=root
 spring.datasource.master.password=123456
-spring.datasource.master.jdbc-url=jdbc:mysql://192.168.1.106:3306/tnmesdb?verifyServerCertificate=false&useSSL=false&allowMultiQueries=true
+spring.datasource.master.jdbc-url=jdbc:mysql://192.168.1.108:3306/tnmesdb?verifyServerCertificate=false&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
 
 
 #sqlserver DB ´ÓÊý¾Ý¿â
 spring.datasource.cluster.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.cluster.jdbc-url=jdbc:sqlserver://192.168.1.106:1433;DatabaseName=PlateWeighDB
+spring.datasource.cluster.jdbc-url=jdbc:sqlserver://192.168.1.108:1433;DatabaseName=PlateWeighDB
 spring.datasource.cluster.username=tnmes
 spring.datasource.cluster.password=tianneng
 
