--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,20 @@ spring.datasource.cluster.password=tianneng
 
 spring.servlet.multipart.maxFileSize=50MB
 spring.servlet.multipart.maxRequestSize=50MB
+
+#spring.mail.host=smtp.qq.com
+#spring.mail.username=631620198@qq.com
+#spring.mail.password=bbndbbhsf02189lphb
+#spring.mail.default-encoding=UTF-8
+#spring.mail.port=465
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+
+spring.mail.default-encoding=UTF-8
+spring.mail.host=smtp.163.com
+#Ìæ»»ÕýÈ·µÄÃÜÂë
+spring.mail.password=******
+spring.mail.port=25
+spring.mail.protocol=smtp
+spring.mail.username=llsbenign@163.com
