--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 spring.datasource.master.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.master.username=root
 spring.datasource.master.password=123456
-spring.datasource.master.jdbc-url=jdbc:mysql://192.168.80.228:3306/ilpsdbtest?verifyServerCertificate=false&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
+spring.datasource.master.jdbc-url=jdbc:mysql://192.168.80.228:3306/ilpsdb?verifyServerCertificate=false&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
 
 
 #sqlserver DB ´ÓÊý¾Ý¿â
@@ -14,15 +14,6 @@ spring.datasource.cluster.password=tianneng
 
 spring.servlet.multipart.maxFileSize=50MB
 spring.servlet.multipart.maxRequestSize=50MB
-
-#spring.mail.host=smtp.qq.com
-#spring.mail.username=631620198@qq.com
-#spring.mail.password=bbndbbhsf02189lphb
-#spring.mail.default-encoding=UTF-8
-#spring.mail.port=465
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.properties.mail.smtp.starttls.required=true
 
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.163.com
