--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 spring.datasource.master.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.master.username=root
 spring.datasource.master.password=123456
-spring.datasource.master.jdbc-url=jdbc:mysql://192.168.80.228:3306/ilpsdbtest?verifyServerCertificate=false&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
+spring.datasource.master.jdbc-url=jdbc:mysql://192.168.80.228:3306/ilpsdb?verifyServerCertificate=false&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
 
 
 #sqlserver DB ´ÓÊý¾Ý¿â
