--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 spring.datasource.master.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.master.username=root
 spring.datasource.master.password=123456
-spring.datasource.master.jdbc-url=jdbc:mysql://192.168.80.228:3306/ilpsdb?verifyServerCertificate=false&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
+spring.datasource.master.jdbc-url=jdbc:mysql://127.0.0.1:3306/ilpsdbtest?verifyServerCertificate=false&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true&serverTimezone=GMT%2B8
 
 
 #sqlserver DB ´ÓÊý¾Ý¿â
@@ -22,3 +22,13 @@ spring.mail.password=******
 spring.mail.port=25
 spring.mail.protocol=smtp
 spring.mail.username=llsbenign@163.com
+
+
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+#\u6253\u5370sql\u90E8\u5206
+log4j.logger.java.sql=DEBUG
+log4j.logger.java.sql.Connection = DEBUG  
+log4j.logger.java.sql.Statement = DEBUG  
+log4j.logger.java.sql.PreparedStatement = DEBUG  
+log4j.logger.java.sql.ResultSet = DEBUG
